syntax = "proto3";

option go_package = "github.com/c31io/voxov/api";

package voxov;

service Auth {
    rpc WaitMsg (WaitMsgRequest) returns (WaitMsgReply);
    rpc CheckMsg (CheckMsgRequest) returns (CheckMsgReply);

    /* TODO
    rpc ChangePhone
    rpc PersonIsHuman
    rpc ReadPerson
    rpc DeletePerson
    */
}

message WaitMsgRequest {
    bytes token = 1;
}

message WaitMsgReply {
    string tel = 1;
    string msg = 2;
}

message CheckMsgRequest {
    bytes token = 1;
    string tel = 2;
    string msg = 3;
}

message CheckMsgReply {
    int64 person = 1;
}
